// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAgentModal closes modal correctly 1`] = `
.c7 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid;
}

.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c11 {
  border: none;
  border-radius: 5px;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 10px;
  width: 230px;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  z-index: 1;
  border-radius: 4px;
  position: fixed;
}

.c14 {
  padding: 15px;
}

.c14:hover {
  cursor: pointer;
  opacity: 0.6;
}

.c12 {
  border-color: white transparent;
  border-style: solid;
  float: right;
  margin-top: 5px;
  border-width: 7px 7px 0px 7px;
  height: 0px;
  width: 0px;
  margin-left: 10px;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c17 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c17:hover {
  opacity: 0.90;
}

.c17:focus {
  outline: none;
}

.c17:active {
  opacity: 0.80;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c2 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c3 {
  grid-row: content;
  padding: 20px;
}

.c15 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c4 {
  display: grid;
  width: 100%;
  grid-template-columns: [text] 50% [dropdown] 50%;
}

.c6 {
  grid-column: dropdown;
}

.c10 {
  width: 200px;
  float: right;
}

.c5 {
  grid-column: text;
  line-height: 75px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c18 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c8 {
  font-family: 'B612',sans-serif;
  font-weight: 600;
  width: 200px;
  float: right;
}

.c16 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c16:hover {
  opacity: 0.90;
}

.c16:focus {
  outline: none;
}

.c16:active {
  opacity: 0.80;
}

@media (max-width:47.9375em) {
  .c15 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c4 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [text] 30px [dropdown] 85px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    grid-column: column-one;
    grid-row: dropdown;
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    width: 100%;
    line-height: 100%;
    grid-column: column-one;
    grid-row: text;
  }
}

@media (max-width:47.9375em) {
  .c18 {
    width: 100%;
    margin-top: 15px;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {
  .c16 {
    width: 100%;
    grid-row: row-two;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Add new agent
    </h2>
    <div
      className="c3"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Agent name
            </p>
            <div
              className="c6"
            >
              <div
                className="c7 c8"
              >
                <input
                  className="c9"
                  name="name"
                  onChange={[Function]}
                  placeholder="007"
                  type="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Operating system
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  linux
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    darwin
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    freebsd
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    openbsd
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Architecture
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  amd64
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm64
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c15"
          >
            <button
              className="c16"
              id="closeButton"
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                }
              }
              type="button"
            >
              Cancel
            </button>
            <button
              className="c17 c18"
              onClick={null}
            >
              Create agent
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`addAgentModal creates agent 1`] = `
.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c6 {
  grid-template-columns: [textfield] 1fr [copy] 50px;
  display: grid;
  height: 50px;
}

.c7 {
  grid-column: textfield;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  text-align: left;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c8 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: copy;
  height: 100%;
}

.c8:hover {
  opacity: 0.90;
}

.c8:focus {
  outline: none;
}

.c8:active {
  opacity: 0.80;
}

.c9 {
  text-align: center;
  display: block;
  width: 60%;
  margin-left: 20%;
  height: 60%;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c2 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c3 {
  grid-row: content;
  padding: 20px;
}

.c4 {
  display: grid;
  grid-template-rows: [description] 1fr [commands] 1fr [button] 1fr;
}

.c10 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
  grid-row: button;
  margin-top: 20px;
}

.c10:hover {
  opacity: 0.90;
}

.c10:focus {
  outline: none;
}

.c10:active {
  opacity: 0.80;
}

.c5 {
  grid-row: description;
  margin: 20px 0px 20px 0px;
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Add new agent
    </h2>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5"
        >
          Copy and run the command on the target machine to download run the client.
        </p>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            curl http://localhost:1970/agent/download?target_os=linux&target_arch=amd64 && chmod +x apollo-agent.bin && ./apollo-agent.bin --agent-id=test --secret=test --host=localhost:1970
          </div>
          <button
            className="c8"
            id="copyToClipboardButton"
            onClick={[Function]}
          >
            <img
              className="c9"
              src={[Function]}
            />
          </button>
        </div>
        <button
          className="c10"
          id="closeButton"
          onClick={[MockFunction]}
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`addAgentModal renders correctly 1`] = `
.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  display: grid;
  grid-template-rows: [title] 50px [description] 1fr;
  padding: 20px;
  min-height: 180px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c8 {
  grid-row: title;
  width: 80%;
  margin: 0 auto;
  text-align: center;
}

.c9 {
  grid-row: description;
  padding: 10px;
  font-size: 0.85rem;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c2 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c3 {
  grid-row: content;
  padding: 20px;
}

.c4 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c5 {
  grid-column: column-one;
  margin-right: 10px;
}

.c10 {
  grid-column: column-two;
  margin-left: 10px;
}

.c7 {
  width: 100%;
}

@media (max-width:47.9375em) {
  .c4 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    grid-row: row-one;
    margin-right: 0px;
    margin: 15px;
  }
}

@media (max-width:47.9375em) {
  .c10 {
    grid-column: column-one;
    grid-row: row-two;
    margin-left: 0px;
    margin: 15px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Add new agent
    </h2>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <button
            className="c6 c7"
            onClick={[Function]}
          >
            <h3
              className="c8"
            >
              Directly on target machine.
            </h3>
            <p
              className="c9"
            >
              You have the correct permissions to download the binary directly on the target machine.
            </p>
          </button>
        </div>
        <div
          className="c10"
        >
          <button
            className="c6 c7"
            onClick={[Function]}
          >
            <h3
              className="c8"
            >
              Manual upload
            </h3>
            <p
              className="c9"
            >
              You download and upload the binary yourself.
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`addAgentModal selects directly correctly 1`] = `
.c7 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid;
}

.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c11 {
  border: none;
  border-radius: 5px;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 10px;
  width: 230px;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  z-index: 1;
  border-radius: 4px;
  position: fixed;
}

.c14 {
  padding: 15px;
}

.c14:hover {
  cursor: pointer;
  opacity: 0.6;
}

.c12 {
  border-color: white transparent;
  border-style: solid;
  float: right;
  margin-top: 5px;
  border-width: 7px 7px 0px 7px;
  height: 0px;
  width: 0px;
  margin-left: 10px;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c17 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c17:hover {
  opacity: 0.90;
}

.c17:focus {
  outline: none;
}

.c17:active {
  opacity: 0.80;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c2 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c3 {
  grid-row: content;
  padding: 20px;
}

.c15 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c4 {
  display: grid;
  width: 100%;
  grid-template-columns: [text] 50% [dropdown] 50%;
}

.c6 {
  grid-column: dropdown;
}

.c10 {
  width: 200px;
  float: right;
}

.c5 {
  grid-column: text;
  line-height: 75px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c18 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c8 {
  font-family: 'B612',sans-serif;
  font-weight: 600;
  width: 200px;
  float: right;
}

.c16 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c16:hover {
  opacity: 0.90;
}

.c16:focus {
  outline: none;
}

.c16:active {
  opacity: 0.80;
}

@media (max-width:47.9375em) {
  .c15 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c4 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [text] 30px [dropdown] 85px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    grid-column: column-one;
    grid-row: dropdown;
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    width: 100%;
    line-height: 100%;
    grid-column: column-one;
    grid-row: text;
  }
}

@media (max-width:47.9375em) {
  .c18 {
    width: 100%;
    margin-top: 15px;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {
  .c16 {
    width: 100%;
    grid-row: row-two;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Add new agent
    </h2>
    <div
      className="c3"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Agent name
            </p>
            <div
              className="c6"
            >
              <div
                className="c7 c8"
              >
                <input
                  className="c9"
                  name="name"
                  onChange={[Function]}
                  placeholder="007"
                  type="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Operating system
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  linux
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    darwin
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    freebsd
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    openbsd
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Architecture
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  amd64
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm64
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c15"
          >
            <button
              className="c16"
              id="closeButton"
              onClick={[MockFunction]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="c17 c18"
              onClick={null}
            >
              Create agent
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`addAgentModal selects manual correctly 1`] = `
.c7 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid;
}

.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c11 {
  border: none;
  border-radius: 5px;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 10px;
  width: 230px;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  z-index: 1;
  border-radius: 4px;
  position: fixed;
}

.c14 {
  padding: 15px;
}

.c14:hover {
  cursor: pointer;
  opacity: 0.6;
}

.c12 {
  border-color: white transparent;
  border-style: solid;
  float: right;
  margin-top: 5px;
  border-width: 7px 7px 0px 7px;
  height: 0px;
  width: 0px;
  margin-left: 10px;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c17 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c17:hover {
  opacity: 0.90;
}

.c17:focus {
  outline: none;
}

.c17:active {
  opacity: 0.80;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c2 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c3 {
  grid-row: content;
  padding: 20px;
}

.c15 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c4 {
  display: grid;
  width: 100%;
  grid-template-columns: [text] 50% [dropdown] 50%;
}

.c6 {
  grid-column: dropdown;
}

.c10 {
  width: 200px;
  float: right;
}

.c5 {
  grid-column: text;
  line-height: 75px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c18 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c8 {
  font-family: 'B612',sans-serif;
  font-weight: 600;
  width: 200px;
  float: right;
}

.c16 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c16:hover {
  opacity: 0.90;
}

.c16:focus {
  outline: none;
}

.c16:active {
  opacity: 0.80;
}

@media (max-width:47.9375em) {
  .c15 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c4 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [text] 30px [dropdown] 85px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    grid-column: column-one;
    grid-row: dropdown;
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    width: 100%;
    line-height: 100%;
    grid-column: column-one;
    grid-row: text;
  }
}

@media (max-width:47.9375em) {
  .c18 {
    width: 100%;
    margin-top: 15px;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {
  .c16 {
    width: 100%;
    grid-row: row-two;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Add new agent
    </h2>
    <div
      className="c3"
    >
      <div>
        <form
          onSubmit={[Function]}
        >
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Agent name
            </p>
            <div
              className="c6"
            >
              <div
                className="c7 c8"
              >
                <input
                  className="c9"
                  name="name"
                  onChange={[Function]}
                  placeholder="007"
                  type="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Operating system
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  linux
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    darwin
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    freebsd
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    openbsd
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <p
              className="c5"
            >
              Architecture
            </p>
            <div
              className="c6"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                  id="dropdown"
                  onClick={[Function]}
                >
                  amd64
                  <div
                    className="c12"
                  />
                </div>
                <ul
                  className="c13"
                >
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm64
                  </li>
                  <li
                    className="c14"
                    onClick={[Function]}
                  >
                    arm
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            className="c15"
          >
            <button
              className="c16"
              id="closeButton"
              onClick={[MockFunction]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="c17 c18"
              onClick={null}
            >
              Create agent
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
